Bug 96052 - FILESAVE: "Prohibited" Shape Incorrectly Exported to OOXML
Summary: FILESAVE: "Prohibited" Shape Incorrectly Exported to OOXML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords: filter:ooxml
Depends on:
Blocks:
 
Reported: 2015-11-25 06:57 UTC by Luke
Modified: 2016-11-27 03:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example with "No" Symbol (14.13 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-11-25 06:57 UTC, Luke
Details
Native "No" Symbol also Exported Incorrectly (11.11 KB, application/vnd.oasis.opendocument.presentation)
2015-11-25 07:03 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-11-25 06:57:47 UTC
Created attachment 120778 [details]
Example with "No" Symbol

The OOXML shape "No" Symbol is incorrectly imported. 

Steps to reproduce:
1. In any MSO app, Insert -> Shape -> "No" Symbol
2. Save
3. Open in LibreOffice

Both Writer and Impress incorrectly import this shape.
Comment 1 Luke 2015-11-25 07:03:34 UTC
Created attachment 120779 [details]
Native "No" Symbol also Exported Incorrectly

Save this file as PPTX. Reopen, and it not how the shape changed.
Comment 2 A (Andy) 2015-11-25 23:33:43 UTC
Reproducible with LO 5.0.3.2, Win 8.1 (both reported issues)
Comment 3 Luke 2016-08-02 19:33:04 UTC
It looks like there were 2 separate issues here. 

Zhengqiang Wang fixed the OOXML import with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=45909a8e7ec2c4ef366836ab6bf975a6c2fdd007

Exporting a native drawing with the 'Prohibited' symbol, still does not export correctly. Let's track that issue here now.
Comment 4 Luke 2016-08-05 02:45:54 UTC
> > Zhengqiang Wang,
> I don't think the line width is lost, maybe the line is too thick and the
> ring is too thin.
> 
> Many Shapes have export problem, also noSmoking shape. The reason is same,
> maybe you can take a look this :
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=b1751e6ed0fd6d6d26141e4405df92520e3c04cd

Are you saying b1751e6ed0fd6d6d26141e4405df92520e3c04cd caused a regression or that it could be used as a model to fix 'Prohibited'?
Comment 5 Zhengqiang Wang 2016-08-05 03:05:32 UTC
(In reply to Luke from comment #4)
> > > Zhengqiang Wang,
> > I don't think the line width is lost, maybe the line is too thick and the
> > ring is too thin.
> > 
> > Many Shapes have export problem, also noSmoking shape. The reason is same,
> > maybe you can take a look this :
> > https://cgit.freedesktop.org/libreoffice/core/commit/
> > ?id=b1751e6ed0fd6d6d26141e4405df92520e3c04cd
> 
> Are you saying b1751e6ed0fd6d6d26141e4405df92520e3c04cd caused a regression
> or that it could be used as a model to fix 'Prohibited'?
I mean it could be used as a model to fix 'Prohibited'
Comment 6 Zhengqiang Wang 2016-08-05 03:08:26 UTC
Not "fix", just "Improve", I think
Comment 7 Commit Notification 2016-11-25 00:31:19 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b6f52c5c6bc57d831e09126f802739589e5eea37

tdf#96052 - export the forbidden shape as path instead of preset shape.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Luke 2016-11-26 23:14:10 UTC
Verified FIXED with Version: 5.4.0.0.alpha0+ (x64)
Build ID: 7b250d56981f78e77454a2a3fd670731b2358e75

Thanks to the good work of Mark Hung, Zhengqiang, Andras, and others our DrawingML  import/export is maturing nicely. Thank you!
Comment 9 Commit Notification 2016-11-27 03:57:53 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=308a00e1dc1799b33bfc26bd8e0ec2797128b671&h=libreoffice-5-3

tdf#96052 - export the forbidden shape as path instead of preset shape.

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.