tdf#96052 - export the forbidden shape as path instead of preset shape.

OOXML noSmoking shape has different definition so that convert LO's
forbidden shape to OOXML noSmoking do not produce good result.
I put it on whitelist and now the geometry looks correct although handle
is lost.

This partially revert unit test for the shape in
2b4f9d0b2b0006fc7bebb9e696a32eabd1aeb993, where forbidden is exported as
a preset shape.

Change-Id: I2e134940fa4a36e6b7b814b008d859691fbcdd6a